# ray-tracer

./: CMakeLists.txt  README.md  main.cpp
results/: ch3_clock.ppm  ch6_sphere.ppm
src/: Camera.h  Canvas.h  CanvasUtils.h  Color.h  Computations.h  Environment.h  Intersection.h  Intersections.h  Light.h  Material.h  Matrix.h  Object.h  Point.h  Projectile.h  Ray.h  Sphere.h  Tuple.h  Vector.cpp  Vector.h  World.h
tests/: test_camera.cpp  test_canvas.cpp  test_intersections.cpp  test_lights.cpp  test_materials.cpp  test_matrices.cpp  test_rays.cpp  test_spheres.cpp  test_transformations.cpp  test_tuples.cpp  test_world.cpp
